# uPredictor

./: README.md
upredictor/charm/planning/: CMakeLists.txt
upredictor/uPredictor/: CMakeLists.txt  Makefile  Output-DiagnosticsHub.txt  ProjectIncludes.cmake.in  a  cmake_install.cmake  kenny_3rd.props  uPredictor.sln.old  uPredictor_2013.sln  uPredictor_2015.sln
upredictor/uPredictor/Calibration/: CMakeLists.txt  homography.cpp
upredictor/uPredictor/ChessBoard/: CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  CloudTransformer.cpp  CloudTransformer.h  Makefile  cmake_install.cmake  multiKinect.cpp  test.py  testMain.cpp
upredictor/uPredictor/ColorSegCUDATest/: CMakeLists.txt  CUDANormalField.cpp  CUDANormalField.h  CUDASphereGridFilter.cpp  CUDASphereGridFilter.h  ColorSegCUDATest.cpp  ColorSegCUDATest.vcxproj  ColorSegCUDATest.vcxproj.filters  ExternalQueuePair.h  ExternalQueuePairProcessor.h  Makefile  ReadMe.txt  a  cmake_install.cmake  spheres.txt
upredictor/uPredictor/CudaApplication/: CMakeLists.txt  CudaApplication.cpp  CudaApplication.vcxproj  CudaApplication.vcxproj.filters  Makefile  cmake_install.cmake  cudaSample.txt
upredictor/uPredictor/EllipseFit/: CMakeLists.txt  Ellipse.cpp  Ellipse.h  Ellipse3D.cpp  Ellipse3D.h  EllipseCostFunction.h  EllipseFit.cpp  EllipseImplicitFit.h  EllipseThetaMin.h  FitFunctions.cpp  FitFunctions.h  LinearAlgebra.cpp  LinearAlgebra.h  Makefile  Plane.cpp  Plane.h  RigidTrans2D.h  RigidTransformation.cpp  RigidTransformation.h  a  a.txt  b.txt  cmake_install.cmake
upredictor/uPredictor/ForwardKinematicsWAM/: CMakeLists.txt  DH_Parameters.cpp  ForwardKinematicsWAM  ForwardKinematicsWAM.cpp  ForwardKinematicsWAM.h  Makefile  cmake_install.cmake
upredictor/uPredictor/GUIExample/: CMakeLists.txt  GUIExample.cpp  GUIExample.vcxproj  GUIExample.vcxproj.filters  Makefile  MyClass.cpp  MyClass.h  MyParentClass.cpp  MyParentClass.h  ReadMe.txt  a  cmake_install.cmake
upredictor/uPredictor/GetPos/: CMakeLists.txt  GetPos  GetPos.cpp  GetPos.cpp~  GetPos.h  Makefile  cmake_install.cmake
upredictor/uPredictor/LZ4/: CMakeLists.txt  LZ4.vcxproj  LZ4.vcxproj.filters  Makefile  ReadMe.txt  cmake_install.cmake
upredictor/uPredictor/PathPlanning/: BasicFormulas.h  CMakeLists.txt  DH.h  ForwardKin.h  Makefile  NaiveIK.h  PathPlanning.cpp  a  cmake_install.cmake  testfile.txt  testfile2.txt
upredictor/uPredictor/RangeUI/: CMakeLists.txt  RangeInterface.cpp  RangeInterface.h  RangeUI.cpp  RangeUI.vcxproj  RangeUI.vcxproj.filters  ReadMe.txt
upredictor/uPredictor/UBCAnnotation/: AnnotationClass.cpp  AnnotationClass.h  AnnotationClassTable.cpp  AnnotationClassTable.h  AnnotationEnumType.cpp  AnnotationEnumType.h  AnnotationEnumUI.cpp  AnnotationEnumUI.h  AnnotationIntValue.cpp  AnnotationIntValue.h  AnnotationObject.cpp  AnnotationObject.h  AnnotationObjectUI.cpp  AnnotationObjectUI.h  AnnotationRecTimeValue.cpp  AnnotationRecTimeValue.h  AnnotationTable.cpp  AnnotationTable.h  AnnotationTableListener.h  AnnotationTableUI.cpp  AnnotationTableUI.h  AnnotationType.cpp  AnnotationType.h  AnnotationTypeTable.cpp  AnnotationTypeTable.h  AnnotationUIFactory.cpp  AnnotationUIFactory.h  AnnotationUINT64Value.cpp  AnnotationUINT64Value.h  AnnotationUtil.h  AnnotationValue.cpp  AnnotationValue.h  CMakeLists.txt  Makefile  ReachAnnotation.cpp  ReachAnnotation.h  ReadMe.txt  UBCAnnotation.vcxproj  UBCAnnotation.vcxproj.filters  cmake_install.cmake
upredictor/uPredictor/UBCCamera/: CMakeLists.txt  CameraModel.cpp  CameraModel.h  Makefile  cmake_install.cmake
upredictor/uPredictor/UBCColorTrackCUDA/: CMakeLists.txt  CUDAColorSegInterface.cpp  CUDAColorSegInterface.h  CUDAControl.cpp  CUDAControl.h  Makefile  SphereTrack.cu  TrackerCUDAStructs.h  UBCColorTrackCUDA.vcxproj  UBCColorTrackerCUDA.cu  UBCColorTrackerCUDA.cuh  UBCColorTrackerCUDA.h  cmake_install.cmake  downgrade.sh
upredictor/uPredictor/UBCDART/: CMakeLists.txt  F4VectPt3DCol.cpp  F4VectPt3DCol.h  KIBackProjector.cpp  KIBackProjector.h  KIDepthSource.cpp  KIDepthSource.h  KIPointCloudSource.cpp  KIPointCloudSource.h  Makefile  PointCloud.cu  TrackerSliders.cpp  TrackerSliders.h  TrackerUI.cpp  TrackerUI.h  UBCDARTModel.cpp  UBCDARTModel.h  UBCDARTModelRenderer.cpp  UBCDARTModelRenderer.h  UBCDARTOptimizer.cpp  UBCDARTOptimizer.h  UBCDARTPredictionRenderer.cpp  UBCDARTPredictionRenderer.h  UBCDARTTracker.cpp  UBCDARTTracker.h  UBCDARTTrackerModelRenderer.cpp  UBCDARTTrackerModelRenderer.h  a  cmake_install.cmake
upredictor/uPredictor/UBCGUI/: AutoResizeWindow.cpp  AutoResizeWindow.h  CMakeLists.txt  CameraViewportManager.cpp  CameraViewportManager.h  ColumnLayout.cpp  ColumnLayout.h  EvenlySpacedRow.cpp  EvenlySpacedRow.h  GLFWWindowWrapper.cpp  GLFWWindowWrapper.h  GLKeyHandler.cpp  GLRenderInterface.h  GTKShutdownInterface.cpp  GTKShutdownInterface.h  GridLayout.cpp  GridLayout.h  ImageWindow.cpp  ImageWindow.h  LayoutContainer.cpp  LayoutContainer.h  LayoutElement.cpp  LayoutElement.h  Makefile  NumberInfoList.cpp  NumberInfoList.h  PauseUnpauseUI.cpp  RenderToggler.cpp  RowLayout.cpp  RowLayout.h  ScrollingWindow.cpp  ScrollingWindow.h  SimpleComboBox.cpp  SimpleComboBox.h  SimpleLabeledComboBox.cpp  SimpleLabeledComboBox.h  SimpleLabeledSlider.cpp  SimpleLabeledSlider.h  SimpleLoadSaveInterface.cpp  SimpleLoadSaveInterface.h  (+8 more)
upredictor/uPredictor/UBCKinect/: ArrayPt3DCollection.cpp  ArrayPt3DCollection.h  BodyCopy.cpp  BodyCopy.h  BodyCopyCollection.cpp  BodyCopyCollection.h  BoundingBox.cpp  BoundingBox.h  BoundingBoxScanner.cpp  BoundingBoxScanner.h  BoxAndConstellation.cpp  BoxAndConstellation.h  BoxAndConstellationFactory.cpp  BoxAndConstellationFactory.h  CMakeLists.txt  FrameDesc.h  FrameRateCounter.cpp  FrameRateCounter.h  KFBGRChannel.cpp  KFBGRChannel.h  KinectDepthCompress.cpp  KinectDepthCompress.h  KinectDepthDecompress.cpp  KinectDepthDecompress.h  KinectFilePlayer.cpp  KinectFilePlayer.h  KinectFrame.cpp  KinectFrame.h  KinectFrameFactory.cpp  KinectFrameFactory.h  KinectImageSaver.cpp  KinectImageSaver.h  KinectInterface.cpp  KinectInterface.h  (+38 more)
(+1300 files in other folders)
