project(PREDICTOR)

add_subdirectory(UBCCamera)
add_subdirectory(UBCColorTrackCUDA)
add_subdirectory(UBCDART)
add_subdirectory(UBCKinect)
add_subdirectory(UBCKinectGUI)
add_subdirectory(UBCGUI)
add_subdirectory(UBCSimpleGeometry)
add_subdirectory(UBCTrackerCUDA)
add_subdirectory(UBCUtil)
#add_subdirectory(ChessBoard)
#add_subdirectory(GUIExample)
add_subdirectory(EllipseFit)
add_subdirectory(PathPlanning)
add_subdirectory(ForwardKinematicsWAM)
add_subdirectory(GetPos)
